# norsodikin

./: Data.txt  MANIFEST.in  MANIFEST.in:  OLLAMA_GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pypi.yml  python.yml
nsdev/: ___init__.py  __init__.py  actions.py  addUser.py  argument.py  bing.py  button.py  colorize.py  database.py  downloader.py  encrypt.py  formatter.py  gemini.py  gradient.py  huggingface.py  listen.py  local.py  logger.py  monitor.py  payment.py  process.py  progress.py  qrcode.py  shell.py  storekey.py  stt.py  translate.py  tts.py  url.py  videofx.py  vision.py  web_summarizer.py  ymlreder.py
nsdev/ai/: bing.py  gemini.py  huggingface.py  local.py  ocr.py  pinterest.py  qrcode.py  search.py  stt.py  translate.py  tts.py  upscaler.py  vision.py  voicecloning.py  web_summarizer.py
nsdev/analytics/: chat.py  manager.py
nsdev/auth/: manager.py
nsdev/code/: encrypt.py
nsdev/data/: __init__.py  database.py  storekey.py  ymlreder.py
nsdev/media/: viu.py
nsdev/payment/: payment.py
nsdev/schedule/: manager.py
nsdev/server/: addUser.py  monitor.py  process.py  speedtest.py
nsdev/telegram/: actions.py  argument.py  button.py  copier.py  errors.py  formatter.py  story.py  videofx.py
nsdev/tempmail/: __init__.py  generator.py  inbox_checker.py  manager.py  utils.py
nsdev/utils/: audiofx.py  cache.py  carbon.py  downloader.py  faker.py  files.py  font_manager.py  fonts.py  github.py  gofile.py  gradient.py  image.py  imagesearch.py  logger.py  lookup.py  mediainfo.py  osint.py  paste.py  pinterest.py  progress.py  ratelimit.py  splitter.py  telegraph.py  viu.py  viu_ckey.py  weather.py  wikipedia.py  zeroxzero.py
