[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "norsodikin"
dynamic = ["version"]
description = "A versatile Python toolkit designed to simplify complex tasks like Telegram bot development, Linux server management, data encryption, and AI integration. Deeply integrated with Pyrogram, it makes your code cleaner, more intuitive, and powerful."
readme = "README.md"
authors = [
    { name = "NorSodikin", email = "admin@NorSodikin.com" },
]
license = { text = "MIT" }
requires-python = ">=3.9, <3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "aiohttp",
    "pyyaml",
    "httpx",
    "requests",
]

[project.urls]
Homepage = "https://github.com/SenpaiSeeker/norsodikin"

[project.optional-dependencies]
pyrogram = [
    "pyrotgfork[fast]",
]
ai = [
    "gTTS",
    "beautifulsoup4",
    "lxml",
    "fake-useragent",
    "googletrans-py",
    "qrcode[pil]",
    "pyzbar",
    "google-generativeai",
    "ollama",
]
server = [
    "psutil",
]
database = [
    "pymongo",
]
cli = [
    "pyfiglet",
]
payment = [
    "faker",
]
media = [
    "yt-dlp",
    "ffmpeg-python",
]
video = [
    "moviepy",
    "numpy",
    "Pillow"
]

all = [
    "norsodikin[pyrogram,ai,server,database,cli,payment,media,video]",
]

[tool.setuptools]
[tool.setuptools.packages.find]
where = ["."]
include = ["nsdev*"]

[tool.setuptools.dynamic]
version = { attr = "nsdev.__version__" }
